hphp/hack/test/typecheck/list_destructuring_too_many.php
<?hh

function f((int, string, bool) $t): void {
  list($a, $b) = $t;
}
